--- a/src/app/pages/sales/daily-sales-data/daily-sales-data.component.html
+++ b/src/app/pages/sales/daily-sales-data/daily-sales-data.component.html
@@ -1,92 +1,79 @@
-<div class="card">
-    <div class="card-header">
-        <h5>Daily Sales data</h5>
-    </div>
-    <form [formGroup]="angForm">
-    <div class="card-block">
-        <div class="row" style="margin: 2%;">
-            <div class="col-sm-3">
-                <label>Select Branch *</label>
-            </div>
-            <div class="col-sm-4">
-                <div class="form-group form-primary form-static-label">
-                    <span class="border-lable-flt">
-                        <ng-select id="BRANCH_NAME" bindValue="CODE" bindLabel="NAME" required #BRANCH_NAME
-                            [(ngModel)]="selectedBrach" formControlName="BRANCH_NAME" (focus)="onFocus(BRANCH_NAME)"
-                            [selectOnTab]='true'>
-                            <ng-option *ngFor="let values of branch" [value]="values">
-                                {{values.NAME}}</ng-option>
-                        </ng-select>
-                    </span>
-                </div>
-            </div>
+<div class="text-center">
+    <i class="fa " [ngClass]="{'d-flex justify-content-center': isLoading1}" style="font-size:46px;"></i>
 
-        </div>
-        <div class="row" style="margin: 2%;">
-            <div class="col-sm-3">
-                <label>Select Dates *</label>
-            </div>
-            <div class="col-sm-4">
-                <div class="form-group input-group">
-                    <span class="border-lable-flt">
-                        <input type="text" placeholder="dd/mm/yyyy" name="fdate" id="fdate" class="form-control"
-                            [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [(ngModel)]="fromdate" formControlName="FROM"
-                            [maxDate]="maxDate" bsDatepicker required>
-                    </span>
-                </div>
-            </div>
-            
-        </div>
-
-        <div class="row" style="margin: 2%;">
-            <div class="col-sm-3">
-                <label> Customer Select Option *</label>
-            </div>
-            <div class="col-sm-4">
-                <div class="form-check mb-3">
-                    <input class="form-check-input" type="radio" name="formRadios" id="formRadios1" checked>
-                    <label class="form-check-label" for="formRadios1">
-                        All customers
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="formRadios" id="formRadios2">
-                    <label class="form-check-label" for="formRadios2">
-                        Select Customers
-                    </label>
-                    
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row" style="margin: 2%;">
-        <div class="col-sm text-right">
-          <button class="btn btn-primary">Go</button>
-        </div>
-      </div>
-    </form>
+    <i class="fa loader" [ngClass]="{'fa-spin fa-spinner': isLoading1}" style="font-size:46px;"></i>
 </div>
 
+<div class="card" *ngIf="!isLoading1">
+    <div class="card-header">
+        <h5>Daily Sales Data</h5>
+    </div>
+    <form [formGroup]="angForm">
+        <div class="card-block">
+            <div class="row" style="margin: 1%;">
+                <!--  *ngIf="showBranch" -->
+
+                <div class="col-sm-2" *ngIf="showBranch">
+                    <label>Select Branch <sub class="required">* </sub></label>
+                </div>
+                <div class="col-sm" *ngIf="showBranch">
+                    <div class="form-group form-primary form-static-label">
+                        <span class="border-lable-flt">
+                            <ng-select id="BRANCH_NAME" bindValue="CODE" bindLabel="NAME" #BRANCH_NAME
+                                [(ngModel)]="selectedBrach" formControlName="BRANCH_NAME" (focus)="onFocus(BRANCH_NAME)"
+                                [selectOnTab]='true' [required]="BRANCH">
+                                <ng-option *ngFor="let values of branch" [value]="values">
+                                    {{values.NAME}}</ng-option>
+                            </ng-select>
+                        </span>
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <label>Select Dates <sub class="required">* </sub></label>
+                </div>
+                <div class="col-sm-2">
+                    <div class="form-group input-group">
+                        <span class="border-lable-flt">
+                            <input type="text" placeholder="dd/mm/yyyy" name="fdate" id="fdate" class="form-control"
+                                [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [(ngModel)]="fromdate" [maxDate]="maxDate"
+                                bsDatepicker formControlName="FROM" required style="max-width: 100px;">
+                        </span>
+                    </div>
+                    <div class="form-group form-primary form-static-label"
+                        *ngIf="angForm.controls['FROM'].invalid && (angForm.controls['FROM'].dirty || angForm.controls['FROM'].touched)"
+                        class="alert alert-danger">
+                        <div *ngIf="angForm.controls['FROM'].errors?.required">
+                            This field is required
+                        </div>
+                    </div>
+                </div>
 
 
-  
-  
-  <select class="form-control" style="width: 120px;
-    height: 30px;
-    font-size: 10px;
-    margin-top: 3px;
-    float: right;" (change)="handleClick($event, 'csv')">
-    <option selected>Export Type </option>
-    <option>CSV</option>
-    <option>PDF</option>
-</select>
+            </div>
+            <div class="row" style="margin: 1%;">
+                <div class="col-sm-2">
+                    <label>Customer Select Option <sub class="required"> * </sub></label>
+                </div>
+                <div class="col-sm-4">
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="Customer_Select_Option" id="inlineRadio1"
+                            value="0" formControlName="Customer_Select_Option">
+                        <label class="form-check-label" for="inlineRadio1">All Customers</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="Customer_Select_Option" id="inlineRadio2"
+                            value="1" formControlName="Customer_Select_Option">
+                        <label class="form-check-label" for="inlineRadio2">Selected Customer</label>
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <button class="btn btn-primary sm" [disabled]="isLoading" (click)="loadData()">Go <i class="fa"
+                            [ngClass]="{'fa-spin fa-spinner': isLoading}"></i></button>
+                </div>
 
-<!-- <smart-table #table class="table-hover table-bordered" id="table" [dataSource]="dataSource" [sortMode]="sortMode" [paging]="true" [columns]="columns" [columnMenu]="true" [filtering]="true" [columnReorder]="true" [columnResize]="true" [columnSizeMode]="columnSizeMode" [selection]="true" [selectionMode]="'one'">
-
-</smart-table> -->
-
-<smart-table #table id="table" [dataSource]="dataSource" [grouping]="grouping" [keyboardNavigation]="keyboardNavigation"
-    [columns]="columns"></smart-table>
+            </div>
 
 
-
+        </div>
+    </form>
+</div>
